<resources>
    <string name="app_name">Movie Catalog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="content_description_tvshow_poster">TvShow Poster</string>
    <string name="content_description_detail_poster">TvShow Poster</string>
    <string name="user_score">User Score</string>
    <string name="age_rating">Age Rating</string>
    <string name="duration">Duration</string>
    <string name="overview">Overview</string>
    <string name="dummy_long_text">
            Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.
    </string>
    <string name="release_date">Release Date</string>
    <string name="status">Status</string>
    <string name="original_language">Original Language</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="type">Type</string>
    <string name="network">Network</string>
    <string name="watch">Watch</string>
    <string name="movie_info">Movie Info</string>
    <string name="content_description_splash_icon">splash icon</string>
    <string name="share">Share</string>
    <string name="share_this_movie_with">Share this movie with</string>
    <string name="share_this_show_with">Share this show with</string>
    <string name="tv_show_info">TV Show Info</string>
    <string name="movies">Movies</string>
    <string name="tvshows">Tv Shows</string>
    <string name="no_connection">Oops, internet terputus. Cek ulang koneksimu.</string>
    <string name="link_not_available">Link Not Available</string>

</resources>